<resources>
    <string name="app_name">TestGeoKnowledge</string>
    <string name="app_header">Test GeoKnowledge</string>

    <!-- Question 1 -->
    <string name="question1">Question 1</string>
    <string name="quiz1">Which city is located in two continents?</string>
    <string name="istanbul">Istanbul, Turkey</string>
    <string name="munich">Munich, Germany</string>
    <string name="texas">Texas, USA</string>

    <!-- Question 2 -->
    <string name="quiz2">Which countries are the smallest in the world?</string>
    <string name="question2">Question 2</string>
    <string name="southampton">Southampton, UK</string>
    <string name="vatican">Vatican City</string>
    <string name="principal_of_monaco">Principal of Monaco</string>

    <!-- Question 3 -->
    <string name="question3">Question 3</string>
    <string name="quiz3">Which Country in Africa was never colonized?</string>
    <string name="mozambique">Mozambique</string>
    <string name="egypt">Egypt</string>
    <string name="ethiopia">Ethiopia</string>

    <!-- Question 4 -->
    <string name="question4">Question 4</string>
    <string name="quiz4">Which is the longest river in Africa?</string>
    <string name="niger">River Niger</string>
    <string name="nile">River Nile</string>
    <string name="benue">River Benue</string>

    <string name="submit">Submit Quiz</string>
</resources>