<?xml version="1.0" encoding="utf-8"?>

<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/nature_background2"
        android:scaleType="centerCrop"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/header_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_header"
                android:textAllCaps="true"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/purple_700"/>

            <LinearLayout
                android:id="@+id/countries_answer"
                style="@style/LinearLayoutStyle">

                <TextView
                    android:id="@+id/quest1_txt"
                    android:text="@string/question1"
                    style="@style/QuestionHeaderStyle"/>

                <TextView
                    android:id="@+id/quiz1_txt"
                    android:text="@string/quiz1"
                    style="@style/QuizHeaderStyle"/>

                <EditText
                    android:id="@+id/edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:orientation="vertical"
                    android:textColor="@color/black"
                    android:hint="Enter answer here">
                </EditText>

            </LinearLayout>

            <!-- Line separator -->
            <View style="@style/line_separator_style" />

            <LinearLayout
                android:id="@+id/small_countries_answer"
                style="@style/LinearLayoutStyle">

                <TextView
                    android:id="@+id/quest2_txt"
                    android:text="@string/question2"
                    style="@style/QuestionHeaderStyle"/>

                <TextView
                    android:id="@+id/quiz2_txt"
                    android:text="@string/quiz2"
                    style="@style/QuizHeaderStyle"/>

                <CheckBox
                    android:id="@+id/checkbox_southampton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="15dp"
                    android:textColor="@color/black"
                    android:text="@string/southampton"/>
                <CheckBox
                    android:id="@+id/checkbox_vatican"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:textColor="@color/black"
                    android:layout_marginLeft="15dp"
                    android:text="@string/vatican"/>
                <CheckBox
                    android:id="@+id/checkbox_monaco"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:orientation="vertical"
                    android:layout_marginLeft="15dp"
                    android:text="@string/principal_of_monaco"/>


            </LinearLayout>

            <!-- Line separator -->
            <View style="@style/line_separator_style" />

            <TextView
                android:id="@+id/quest3_txt"
                android:text="@string/question3"
                style="@style/QuestionHeaderStyle"/>

            <TextView
                android:id="@+id/quiz3_txt"
                android:text="@string/quiz3"
                style="@style/QuizHeaderStyle"/>

            <RadioGroup
                android:id="@+id/colonize_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:textColor="@color/black"
                android:layout_marginLeft="15dp">
                <RadioButton
                    android:id="@+id/radio_mozambique"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/mozambique"/>
                <RadioButton
                    android:id="@+id/radio_egypt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/egypt"/>
                <RadioButton
                    android:id="@+id/radio_ethiopia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/ethiopia"/>
            </RadioGroup>
            <!-- Line separator -->
            <View style="@style/line_separator_style" />

            <TextView
                android:id="@+id/quest4_txt"
                android:text="@string/question4"
                style="@style/QuestionHeaderStyle"/>

            <TextView
                android:id="@+id/quiz4_txt"
                android:text="@string/quiz4"
                style="@style/QuizHeaderStyle"/>

            <RadioGroup
                android:id="@+id/river_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="15dp">

                <RadioButton
                    android:id="@+id/radio_niger"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/niger"/>

                <RadioButton
                    android:id="@+id/radio_nile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/nile"/>
                <RadioButton
                    android:id="@+id/radio_benue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/benue"/>
            </RadioGroup>

            <!-- Line separator -->
            <View style="@style/line_separator_style" />

            <Button
                android:id="@+id/score_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="#388E3C"
                android:text="@string/submit"
                android:onClick="gradeQuiz"
                android:textAllCaps="true"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"/>
        </LinearLayout>

    </RelativeLayout>

</ScrollView>
